# mlde.d.moonlightde

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codeComunidades  codeComunidades.pub
src/core/: CMakeLists.txt  README.md
src/core/c++/: Activator.cpp  Controller.cpp  Controller.h  Core.cpp  Core.h  CoreConfigurationUI.cpp  CoreConfigurationUI.h  CoreContext.cpp  CoreContext.h  DefaultActions.cpp  Environment.cpp  Environment.h  Intent.cpp  ModuleManager.cpp  ModuleManager.h  ModuleModel.cpp  ModuleModel.h  ModulePicker.cpp  ModulePicker.h  ModuleSettings.cpp  MoonLightDECoreConfig.h.in  SettingsProfile.cpp  SettingsProfile.h  main.cpp  sendIntent.cpp
src/core/ui/: CoreConfigurationUI.ui  ModulePicker.ui
src/core_test/: CMakeLists.txt
src/core_test/c++/: Activator.cpp  IddleModule.cpp  TestICore.cpp  TestICore.h
src/file-manager/pcmanfm/: Activator.cpp  CMakeLists.txt  application.cpp  application.h  autorundialog.cpp  autorundialog.h  desktoppreferencesdialog.cpp  desktoppreferencesdialog.h  desktopwindow.cpp  desktopwindow.h  launcher.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  tabpage.cpp  tabpage.h  view.cpp  view.h
src/keyboard-shortcuts/daemon/: Activator.cpp  CMakeLists.txt  client_action.cpp  client_proxy.cpp  client_proxy.h  core.cpp  core.h  daemon_adaptor.cpp  fixed_timeout.h  inner_action.cpp  inner_action.h  log_target.h  meta_types.cpp  method_action.h  mutex.cpp  native_adaptor.cpp
src/keyboard-shortcuts/ui/: CMakeLists.txt
src/model_filesystem_gvfs/: CMakeLists.txt
src/model_filesystem_gvfs/c++/: Activator.cpp  EjectVolumeOp.cpp  EjectVolumeOp.h  FileMoveOp.cpp  FileMoveOp.h  FileSystemGVFS.cpp  FileSystemGVFS.h  GVFSDirectory.cpp  GVFSDirectory.h  GVFSMount.cpp  GVFSMount.h  GVFSVolume.cpp  GVFSVolume.h  GVFSVolumeManager.cpp  GVFSVolumeManager.h  GVFSVolumeMonitor.cpp  GVFSVolumeMonitor.h  MountVolumeOp.cpp  MountVolumeOp.h  NodeGVFS.cpp  NodeGVFS.h  UnmountMountOp.cpp  UnmountMountOp.h
src/model_notifications/: CMakeLists.txt  README.md
src/model_notifications/c++/: Activator.cpp  NotificationsDbusInterface.cpp  NotificationsDbusInterface.h  StackImpl.cpp  StackImpl.h  module_config.h.in
src/model_remote/: CMakeLists.txt
src/model_remote/c++/: Activator.cpp  Remote.cpp  cli-main.cpp
src/notifications/: CMakeLists.txt
src/notifications/c++/: Activator.cpp  Feedbacker.cpp  Feedbacker.h  NotificationBox.cpp  NotificationBox.h  NotificationMemo.cpp  NotificationMemo.h  NotificationsDbusInterface.cpp  NotificationsDbusInterface.h  NotificationsPanel.cpp  NotificationsPanel.h  StakedNotice.cpp  StakedNotice.h
src/notifications/config/: main.cpp
src/notifications/src/: Activator.cpp  CMakeLists.txt  notification.cpp  notifyd.cpp
src/notifications/ui/: NotificationBox.ui  NotificationsPanel.ui  notification.ui  stackedNotice.ui
src/panel/: CMakeLists.txt
src/panel-dash/: CMakeLists.txt  README  xdgcachedmenu.h
src/panel-dash/c++/: Activator.cpp  AppButton.cpp  AppButton.h  ClasicMenuFactory.cpp  Dash.cpp  Dash.h  DashFactory.cpp  DashFactory.h
src/panel-dash/ui/: Dash.ui
src/panel-quicklauchers/: CMakeLists.txt  README
src/panel-quicklauchers/c++/: Activator.cpp  lxqtquicklaunch.cpp  quicklaunchaction.cpp  quicklaunchbutton.cpp
src/panel/c++/: Activator.cpp  Panel.cpp  Panel.h  SidePanel.h  panel.cpp  panel.h
src/panel/ui/: panel.ui
src/presentation_panel/: CMakeLists.txt  README.md  presentation_panel.desktop.in
src/presentation_panel/c++/: Activator.cpp  PanelImpl.cpp  PanelImpl.h  StartButton.cpp  StartButton.h  WidgetsTracker.cpp  WidgetsTracker.h  module_config.h.in
src/presentation_panel/res/: descriptor.desktop.in
src/presentation_panel_dash/: CMakeLists.txt  Makefile  README  cmake_install.cmake
src/presentation_panel_dash/c++/: Activator.cpp  AppButton.h  Dash.cpp  Dash.h  DashFactory.h  DashViewItemDelegate.cpp  DashViewModel.cpp  DashViewModel.h  DesktopFileCollection.cpp  GDesktopFile.cpp  GDesktopFile.h  GDesktopFileCollection.cpp  GDesktopFileCollection.h  lxqtpower.h  lxqtpowerproviders.h  module_config.h.in
src/presentation_panel_dash/ui/: Dash.ui
src/presentation_panel_datetime/: CMakeLists.txt
src/presentation_panel_datetime/c++/: Activator.cpp  CalendarWidget.cpp  CalendarWidget.h  lxqtclock.cpp  lxqtclock.h  lxqtclockconfiguration.cpp  lxqtclockconfiguration.h  module_config.h.in
src/presentation_panel_tasksbar/: CMakeLists.txt
src/presentation_panel_tasksbar/c++/: Activator.cpp  lxqttaskbar.cpp  lxqttaskbar.h  lxqttaskbutton.cpp  lxqttaskbutton.h  module_config.h.in
src/remote/: CMakeLists.txt  README.md
src/remote/c++/: Remote.h
src/shortcuts-service/: CMakeLists.txt
src/shortcuts-service/client/: CMakeLists.txt  action.h  action_p.h  client.cpp
src/shortcuts-service/cmake/: create_pkgconfig_file.cmake  lxqt_globalkeys_ui-config.cmake.in  lxqt_globalkeys_use.cmake
src/shortcuts-service/config/: CMakeLists.txt  actions.h  default_model.cpp  edit_action_dialog.cpp  edit_action_dialog.h  lxqt-config-globalkeyshortcuts.desktop.in  main_window.cpp  main_window.h  shortcut_delegate.h  shortcut_selector.h
src/shortcuts-service/config/translations/: lxqt-config-globalkeyshortcuts_ar.ts  lxqt-config-globalkeyshortcuts_cs.ts  (+18 more)
src/shortcuts-service/daemon/: Activator.cpp  CMakeLists.txt  base_action.cpp  base_action.h  client_action.h  command_action.cpp  command_action.h  core.cpp  core.h  daemon_adaptor.h  inner_action.cpp  inner_action.h  log_target.cpp  meta_types.h  method_action.cpp  mutex.h  native_adaptor.h  pipe_utils.cpp  pipe_utils.h  string_utils.cpp  string_utils.h
src/shortcuts-service/ui/: CMakeLists.txt  shortcut_selector.cpp  shortcut_selector.h
src/utils_module_skel/: CMakeLists.txt
src/utils_module_skel/c++/: Activator.cpp
src/utils_module_skel/res/: descriptor.desktop.in
test/core/: CMakeLists.txt  Test.conf
test/core/test_driver/: Activator.cpp  CMakeLists.txt  TestICore.cpp  TestICore.h  TestIntentFilter.cpp  TestIntentFilter.h  descriptor.in
test/core/test_module/: Activator.cpp  CMakeLists.txt  descriptor.in
(+270 files in other folders)
